--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MovieFinderApp</title>
+  <title>Movie App</title>
   <base href="/">
   <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
